src/blocks/svg-icon-maxi/editor.scss
.maxi-svg-icon-block {
	&__placeholder {
		display: flex;
		align-items: center;
		justify-content: center;
		box-shadow: none !important;
		border: 1px dashed #b4bbc1;
		border-radius: 3px;
		color: #464a53;
		width: 100%;
		min-height: 100px;
		background-color: #edeff0;
		font-size: 13px;
	}
	&__replace-icon {
		opacity: 1;
		visibility: visible;
		width: 40px;
		height: 40px;
		position: absolute;
		top: 0;
		right: 0;
		background: #232533;
		z-index: 11;

		svg {
			fill: #fff;
			width: 20px;
			height: 20px;
		}
	}
}

